refined icon selection styling and fixed vertical alignment issues

--- a/blocks/icon/style.scss
+++ b/blocks/icon/style.scss
@@ -1,1 +1,6 @@
 @import './libraries/wp-amjl-iconfont.css';
+
+.components-modal__content {
+	padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
